[package]
name = "redimage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
anyhow = "1.0"

[lib]
name="reddit"
path="src/lib/mod.rs"

[[bin]]
name="reddit_client"
path="src/main.rs"
